kubernetes/falcon-fans.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: falcon-fans
  labels:
    app: falcon-fans
spec:
  replicas: 1
  selector:
    matchLabels:
      app: falcon-fans
  template:
    metadata:
      labels:
        app: falcon-fans
    spec:
      containers:
      - name: falcon-fans
        image: localhost:32000/falcon-fans:1.0.0
