kubernetes/plex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      hostNetwork: true
      containers:
      - name: plex
        image: localhost:32000/pms-docker:766870b75cf72916e0930856d5a15e7f579bbe88
        volumeMounts:
        - name: plex-data
          mountPath: /data
        - name: plex-config
          mountPath: /config
      volumes:
      - name: plex-data
        hostPath:
          path: /data/samba
          type: DirectoryOrCreate
      - name: plex-config
        hostPath:
          path: /data/plex-config
          type: DirectoryOrCreate
