kubernetes/samba.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba
  namespace: default
  labels:
    app: samba
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samba
  template:
    metadata:
      labels:
        app: samba
    spec:
      hostNetwork: true
      containers:
      - name: samba
        image: localhost:32000/samba:4.15.2
        ports:
        - containerPort: 137
          protocol: UDP
        - containerPort: 139
          protocol: UDP
        - containerPort: 445
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: samba-volume
          mountPath: /shared
      volumes:
      - name: samba-volume
        hostPath:
          path: /data/samba
          type: DirectoryOrCreate
