kubernetes/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: localhost:32000/adminer:4.8.1
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: adminer
  namespace: default
  labels:
    app: adminer
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: adminer
  type: ClusterIP
