kubernetes/dashboard.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-dashboard-public
  namespace: kube-system
  labels:
    app: kubernetes-dashboard
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30443
  selector:
    app: kubernetes-dashboard
  type: NodePort
