kubernetes/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: localhost:32000/django-falcon:1.0.5
        ports:
        - containerPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: default
  labels:
    app: django
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: django
  type: ClusterIP
