kubernetes/gitea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: localhost:32000/gitea/gitea:1.15.8
        ports:
        - containerPort: 3000
        - containerPort: 22
        volumeMounts:
        - name: gitea
          mountPath: /data
      volumes:
      - name: gitea
        hostPath:
          path: /data/git
          type: DirectoryOrCreate
---
kind: Service
apiVersion: v1
metadata:
  name: gitea
  namespace: default
  labels:
    app: gitea
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
    - protocol: TCP
      name: ssh
      port: 22
      targetPort: 22
      nodePort: 30022
  selector:
    app: gitea
  type: NodePort
