kubernetes/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: localhost:32000/kibana:7.16.2
        ports:
        - containerPort: 5601
---
kind: Service
apiVersion: v1
metadata:
  name: kibana
  namespace: default
  labels:
    app: kibana
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5601
  selector:
    app: kibana
  type: ClusterIP
