kubernetes/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      hostNetwork: true
      containers:
      - name: postgres
        image: localhost:32000/postgres:14.1
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres
        hostPath:
          path: /data/postgres
          type: DirectoryOrCreate
---
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: default
  labels:
    app: postgres
spec:
  ports:
  - protocol: TCP
    port: 5432
  selector:
    app: postgres
  type: ClusterIP
