kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /adminer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: adminer
            port:
              number: 80
      - path: /git(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              number: 80
      - path: /kibana(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 80
